--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
    										data analysis (EDA) to determine key insights.
 										<br><br>For reference dataset: <b><a href="https://www.kaggle.com/datasets/ahmedmohamed2003/retail-store-sales-dirty-for-data-cleaning?utm_source=chatgpt.com">Retail Store Sales: Dirty for Data Cleaning</a></b>
 										</p>
-								<a class="image main">
+								<div class="image main">
 								<img src="images/sql.png" alt="SQL" 
 									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
-								</a><br>
+								</div><br>
 								<ul class="actions special">
 									<li><a href="https://github.com/eschewer/retail_store_sales/blob/main/retail_store_sales.sql" 
   									 	target="_blank" 
@@ -285,3 +285,4 @@
 
 	</body>
 </html>
+
