--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								sizes="(max-width: 600px)
 								100vw, 600px"
 								alt="Excel Dashboard" 
-									style="display: block; margin: 0 auto; height:auto; transform: none; transition: none;" />
+									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none;" />
 								</a>
 								<p style="font-family: 'Arial'; font-size: 18px; text-align:left; ">
 								<b>Top 10 Gap:</b> Even among the richest people, there is a big difference in wealth between the #1 spot (Bernard Arnault) and the rest of the top 10.<br><br>
@@ -93,10 +93,16 @@
    										data analysis (EDA) to determine key insights.
 										<br><br>For reference dataset: <b><a href="https://www.kaggle.com/datasets/ahmedmohamed2003/retail-store-sales-dirty-for-data-cleaning?utm_source=chatgpt.com">Retail Store Sales: Dirty for Data Cleaning</a></b>
 										</p>
-								<div class="image main">
+								<a class="image main">
 								<img src="images/sql.png" alt="SQL" 
-									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
-								</div><br>
+									srcset="
+									images/sql.png 400w,
+									images/sql.png 600w,
+									images/sql.png 900w"
+									sizes="(max-width: 600px)
+									100vw, 600px"
+									style="display: block; margin: 0 auto; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
+								</a><br>
 								<ul class="actions special">
 									<li><a href="https://github.com/eschewer/retail_store_sales/blob/main/retail_store_sales.sql" 
   									 	target="_blank" 
@@ -110,7 +116,14 @@
 										Transformed my SQL findings into an interactive Power BI dashboard. I chose Power BI for this project because I am more familiar with it than Tableau, allowing me to build the visualizations more effectively.
 										</p>
 								<a class="image main">
-								<img src="images/powerbi_dashboard.png" alt="Power BI" 
+								<img src="images/powerbi_dashboard.png"
+									srcset="
+									images/powerbi_dashboard.png 400w,
+									images/powerbi_dashboard.png 600w,
+									images/powerbi_dashboard.png 900w"
+									sizes="(max-width: 600px)
+									100vw, 600px"
+								alt="Power BI" 
 									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
 								</a>
 								<p style="font-family: 'Arial'; font-size: 18px; text-align:left; ">
@@ -285,4 +298,3 @@
 
 	</body>
 </html>
-
