--- a/certificate.html
+++ b/certificate.html
@@ -50,15 +50,16 @@
 										</p>
 								</header>
 								<a class="image main">
-								<img src="images/data_analytics_essentials.png"
-								srcset="
-									images/data_analytics_essentials.png 400w,
-									images/data_analytics_essentials.png 600w,
-									images/data_analytics_essentials.png 900w"
-									sizes="(max-width: 600px)
-									100vw, 600px"
-								alt="data_analytics_essentials" 
-									style="display: block; margin: 0 auto; height:auto; transform: none; transition: none;" />
+								<img src="images/data_analytics_essentials.png" 
+									alt="Data Analytics Essentials Certificate" 
+									style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 500px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" />
 								</a>
 								<hr style="border: 1px solid black; margin-bottom: 20px;">
 								<header class="major">
@@ -70,15 +71,16 @@
 										</p>
 								</header>
 								<a class="image main">
-								<img src="images/python_data_analysis.jpg"
-								srcset="
-									images/python_data_analysis.png 400w,
-									images/python_data_analysis.png 600w,
-									images/python_data_analysis.png 900w"
-									sizes="(max-width: 600px)
-									100vw, 600px"
-								alt="python_data_analysis" 
-									style="display: block; margin: 0 auto; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
+								<img src="images/python_data_analysis.jpg" 
+									alt="Data Analytics Essentials Certificate" 
+									style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 500px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" />
 								</a>
 								</header>
 
@@ -152,4 +154,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
