--- a/index.html
+++ b/index.html
@@ -63,22 +63,23 @@
 										</p>
 								<a class="image main">
 								<img src="images/excel_dashboard.png"
-								srcset="
-								images/excel_dashboard.png 400w,
-								images/excel_dashboard.png 600w,
-								images/excel_dashboard.png 900w"
-								sizes="(max-width: 600px)
-								100vw, 600px"
 								alt="Excel Dashboard" 
-									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none;" />
+									style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 700px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" />
 								</a>
-								<p style="font-family: 'Arial'; font-size: 18px; text-align:left; ">
-								<b>Top 10 Gap:</b> Even among the richest people, there is a big difference in wealth between the #1 spot (Bernard Arnault) and the rest of the top 10.<br><br>
-								<b>Age and Wealth:</b> Age group analysis indicates that long-term business success leads to higher wealth, with the largest concentrations found in the 60–69 (127 people) and 80+ (128 people) age groups.<br><br>
-								<b>Best Sectors for Money:</b> If you look at total wealth, Technology and Fashion & Retail are where the most money is concentrated.<br><br>
-								<b>Common Industries:</b> While Tech has the most money, Finance & Investments actually has the highest number of individual billionaires.
+								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; padding-left: 50px; padding-right: 50px;">
+								<b>Top 10 Gap:</b> Even among the richest people, there is a big difference in wealth between the #1 spot (Bernard Arnault) and the rest of the top 10.
+								<br><br><b>Age and Wealth:</b> Age group analysis indicates that long-term business success leads to higher wealth, with the largest concentrations found in the 60–69 (127 people) and 80+ (128 people) age groups.
+								<br><br><b>Best Sectors for Money:</b> If you look at total wealth, Technology and Fashion & Retail are where the most money is concentrated.
+								<br><br><b>Common Industries:</b> While Tech has the most money, Finance & Investments actually has the highest number of individual billionaires.
 								</p>
-								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; font-style:italic;"> To learn more, you can download the excel file below.</p>
+								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; font-style:italic;padding-left: 50px;" > To learn more, you can download the excel file below.</p>
 								<ul class="actions special">
 									<li><a href="files/Billionaires Statistics Dataset.xlsx" target="_blank" 
    										rel="noopener noreferrer" download="Billionaires Statistics Dataset.xlsx" class="button large">Download Project</a></li>
@@ -94,14 +95,15 @@
 										<br><br>For reference dataset: <b><a href="https://www.kaggle.com/datasets/ahmedmohamed2003/retail-store-sales-dirty-for-data-cleaning?utm_source=chatgpt.com">Retail Store Sales: Dirty for Data Cleaning</a></b>
 										</p>
 								<a class="image main">
-								<img src="images/sql.png" alt="SQL" 
-									srcset="
-									images/sql.png 400w,
-									images/sql.png 600w,
-									images/sql.png 900w"
-									sizes="(max-width: 600px)
-									100vw, 600px"
-									style="display: block; margin: 0 auto; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
+								<img src="images/sql.png" alt="SQL Image" 
+									style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 700px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" />
 								</a><br>
 								<ul class="actions special">
 									<li><a href="https://github.com/eschewer/retail_store_sales/blob/main/retail_store_sales.sql" 
@@ -117,20 +119,21 @@
 										</p>
 								<a class="image main">
 								<img src="images/powerbi_dashboard.png"
-									srcset="
-									images/powerbi_dashboard.png 400w,
-									images/powerbi_dashboard.png 600w,
-									images/powerbi_dashboard.png 900w"
-									sizes="(max-width: 600px)
-									100vw, 600px"
-								alt="Power BI" 
-									style="display: block; margin: 0 auto; width:880px; height:auto; transform: none; transition: none; border: 2px solid #ccc; padding: 5px;" />
+								alt="Power BI Dashboard" 
+									style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 700px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" />
 								</a>
-								<p style="font-family: 'Arial'; font-size: 18px; text-align:left; ">
+								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; padding-left: 50px; padding-right: 50px;">
 									<b>Customer Loyalty:</b> The data identifies how each customer ranks based on their total spending, highlighting the store's highest-contributing shoppers.
 									<br><br><b>Products Performance:</b> Products can be ranked by their total sales volume or overall revenue generated to identify which items are driving the most business value.
 									<br><br><b>Sales Trend Over Time:</b> Reveals the monthly sales fluctuations from 2022 to 2025, highlighting periods of growth and seasonal demand.
-								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; font-style:italic;"> To learn more, you can download the Power BI file below.</p>
+								<p style="font-family: 'Arial'; font-size: 15px; text-align:left; font-style:italic; padding-left: 50px;"> To learn more, you can download the Power BI file below.</p>
 								<ul class="actions special">
 									<li><a href="files/retail_store_sales.pbix" 
   									 	target="_blank" 
