--- a/certificate.html
+++ b/certificate.html
@@ -71,19 +71,50 @@
 										</p>
 								</header>
 								<a class="image main">
-								<img src="images/python_data_analysis.jpg" 
-									alt="Data Analytics Essentials Certificate" 
-									style="display: block; 
+								<img src="images/python_data_analysis.jpg"
+										alt="Python Data Certificate" 
+										style="display: block; 
 											margin: 0 auto; 
 											width: 100%; 
 											max-width: 500px; 
 											height: auto; 
 											transform: none;
 											transition: none;
-											border: 1px solid #ccc;" />
+											border: 1px solid #ccc;" 
+								/>
 								</a>
 								</header>
-
+								<hr style="border: 1px solid black; margin-bottom: 50px;">
+								 <p style="text-align:center; font-size:20px;">
+										<b>Certificate of Appreciation from previous job as an Advisor 1, Customer Service at Concentrix</b>
+								</p>
+								<a class="image main">
+								<img src="images/q2.jpg"
+										alt="Certificate of Appreciation as Q2 Top Performing Agent " 
+										style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 500px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" 
+								/>
+								</a> <br>
+								<a class="image main">
+								<img src="images/q3.jpg"
+										alt="Certificate of Appreciation as Q3 Top Performing Agent " 
+										style="display: block; 
+											margin: 0 auto; 
+											width: 100%; 
+											max-width: 500px; 
+											height: auto; 
+											transform: none;
+											transition: none;
+											border: 1px solid #ccc;" 
+								/>
+								</a>
+								</header>
 
 							</section>
 
@@ -154,5 +185,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-
 </html>
