--- a/certificate.html
+++ b/certificate.html
@@ -89,7 +89,7 @@
 										<b>Certificate of Appreciation from previous job as an Advisor 1, Customer Service at Concentrix</b>
 								</p>
 								<a class="image main">
-								<img src="images/q2.jpg"
+								<img src="images/Q2.jpg"
 										alt="Certificate of Appreciation as Q2 Top Performing Agent " 
 										style="display: block; 
 											margin: 0 auto; 
@@ -102,7 +102,7 @@
 								/>
 								</a> <br>
 								<a class="image main">
-								<img src="images/q3.jpg"
+								<img src="images/Q3.jpg"
 										alt="Certificate of Appreciation as Q3 Top Performing Agent " 
 										style="display: block; 
 											margin: 0 auto; 
@@ -186,3 +186,4 @@
 
 	</body>
 </html>
+
