--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" target="_blank"  rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/carlo-c-362090123/" target="_blank"  rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/eschewer" target="_blank"  rel="noopener noreferrer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -291,7 +291,7 @@
 								<ul class="icons alt">
 									<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/carlo-c-362090123/" class="icon brands alt fa-linkedin" target="_blank"  rel="noopener noreferrer"><span class="label">Linkedin</span></a></li>
 									<li><a  href="https://github.com/eschewer" target="_blank"  rel="noopener noreferrer" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
@@ -316,3 +316,4 @@
 
 	</body>
 </html>
+
