--- a/certificate.html
+++ b/certificate.html
@@ -168,11 +168,11 @@
 						</section>
 					</footer>
 
-				<!-- Copyright -->
+				<!-- Copyright 
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
+				-->
 			</div>
 
 		<!-- Scripts -->
@@ -186,5 +186,6 @@
 
 	</body>
 </html>
+
 
 
