--- a/certificate.html
+++ b/certificate.html
@@ -170,7 +170,7 @@
 										<b>Certificate of Appreciation from previous job as an Advisor 1, Customer Service at Concentrix</b>
 								</p>
 								<a class="image main">
-								<img src="images/q2.png"
+								<img src="images/Q2.png"
 										alt="Certificate of Appreciation as Q2 Top Performing Agent " 
 										style="display: block; 
 											margin: 0 auto; 
@@ -183,7 +183,7 @@
 								/>
 								</a> <br>
 								<a class="image main">
-								<img src="images/q3.png"
+								<img src="images/Q3.png"
 										alt="Certificate of Appreciation as Q3 Top Performing Agent " 
 										style="display: block; 
 											margin: 0 auto; 
@@ -266,4 +266,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
